CSS revisions to ensure header stacks and nav is visible on smaller screens.

--- a/src/FactoryStoreSites/aura/factoryStoreMainNavigation/factoryStoreMainNavigation.css
+++ b/src/FactoryStoreSites/aura/factoryStoreMainNavigation/factoryStoreMainNavigation.css
@@ -110,7 +110,7 @@
 }
 
 
-@media screen and (max-width: 760px){
+@media screen and (max-width: 820px){
   .THIS.flyoutTriggerWrap {
 		 display: flex;
 		 width: 100%;
